--- a/templates/home.html
+++ b/templates/home.html
@@ -8,5 +8,6 @@
         <h1>Weather Data API</h1>
         <p>URL format: http://127.0.0.1:5000/api/v1/station/date</p>
         <p>URL Example: http://127.0.0.1:5000/api/v1/20/19931025</p>
+        <p>{{data|safe}}
     </body>
 </html>
