Add URL endpoint query to get yearly or all data from stations

--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,9 @@
     <body>
         <h1>Weather Data API</h1>
         <p>URL format: http://127.0.0.1:5000/api/v1/station/date</p>
-        <p>URL Example: http://127.0.0.1:5000/api/v1/20/19931025</p>
+        <p>For One Station: http://127.0.0.1:5000/api/v1/20/19931025</p>
+        <p>For all the stations: http://127.0.0.1:5000/api/v1/10</p>
+        <p>For a whole year report: http://127.0.0.1:5000/api/v1/yearly/10/[1990]</p>
         <p>{{data|safe}}
     </body>
 </html>
